[gd_scene load_steps=2 format=3 uid="uid://b58muftj2st80"]

[ext_resource type="Script" path="res://src/TenshouExtract.gd" id="1_mq4ii"]

[node name="TenshouExtract" type="Node"]
script = ExtResource("1_mq4ii")

[node name="MemoryUsage" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.5
offset_top = -23.0
offset_right = 21.5
grow_horizontal = 2
grow_vertical = 0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -84.0
offset_right = -88.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="LoadBIN" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 16.0
offset_right = 211.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
text = "Load and Extract Archive"

[node name="LoadELF" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -28.0
offset_right = 211.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
text = "Load SLPM_665.66"

[node name="BoxLoadBIN" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("OUT.BIN", "MOVIE.BIN", "VOICE.BIN")

[node name="BoxLoadELF" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("SLPM_665.66")

[node name="LoadFOLDER" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[connection signal="pressed" from="Control/LoadBIN" to="." method="_on_load_bin_pressed"]
[connection signal="pressed" from="Control/LoadELF" to="." method="_on_load_elf_pressed"]
[connection signal="file_selected" from="BoxLoadBIN" to="." method="_on_box_load_bin_file_selected"]
[connection signal="file_selected" from="BoxLoadELF" to="." method="_on_box_load_elf_file_selected"]
[connection signal="dir_selected" from="LoadFOLDER" to="." method="_on_load_folder_dir_selected"]
